# VeryOriginalGame2000

./: LICENSE  README.md  workspace.code-workspace
client/: .gitignore  Project.xml  README.md
client/assets/xml/: common.xml  connection.xml  loading.xml  settings.xml  welcome.xml
client/source/: Bullet.hx  ByteReader.hx  Collisions.hx  Config.hx  ConnectionState.hx  Controller.hx  Entity.hx  HUD.hx  Level.hx  LoadingState.hx  Main.hx  Minimap.hx  PlayState.hx  Player.hx  Ring.hx  SettingsState.hx  Shaders.hx  TCPClient.hx  Types.hx  UDPClient.hx  Utils.hx  Weapons.hx  WelcomeState.hx  World.hx
server/: .gitignore  CMakeLists.txt  README.md
server/data/: first_try.xml  second_try.xml  tileset.xml  weapons.xml
server/include/common/: bitarray.h  config.h.in  deftypes.h  ring.hpp  time.h  utils.h  vector.hpp  xorshift64plus.h
server/include/engine/: ai.h  collision.h  controller.h  enemy.h  entity.h  game_config.h  player.h  spawner.h  tilemap.h  weapon.h  world.h
server/include/network/: network.h  network_frame.h  portfinder.h
server/include/tinyxml/: tinyxml2.h
server/src/: CMakeLists.txt  server.cpp
server/src/common/: CMakeLists.txt  README.md  bitarray.cpp  time.cpp  utils.cpp  xorshift64plus.cpp
server/src/engine/: CMakeLists.txt  README.md  ai.cpp  collision.cpp  controller.cpp  enemy.cpp  entity.cpp  player.cpp  tilemap.cpp  weapon.cpp  world.cpp
server/src/loguru/: CMakeLists.txt  README.md  loguru.cpp
server/src/network/: CMakeLists.txt  README.md  network.cpp  network_frame.cpp
